tune it until it works