@@ -5,4 +5,7 @@ DEPENDENT_JARS=lib/hanlp-portable-1.2.8.jar,lib/nak_2.11-1.3.jar,lib/breeze-nati
 WORKING_DIR_FILES=stopWords,data_dependent.ini
 MAIN_CLASS=MLlib.Word2VecCNPlay
 
-spark2-submit --archives $HANLP_DATA_ARCHIVE --jars $DEPENDENT_JARS --class $MAIN_CLASS --name BJ_AI_WORD2VEC --files $WORKING_DIR_FILES --queue $AI_QUEUE_NAME --driver-memory 2G --executor-memory 2G train_model.jar
+spark2-submit --archives $HANLP_DATA_ARCHIVE --jars $DEPENDENT_JARS --class $MAIN_CLASS --name BJ_AI_WORD2VEC --files $WORKING_DIR_FILES --queue $AI_QUEUE_NAME \
+--conf "spark.driver.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" \
+--conf "spark.kryoserializer.buffer.max=1024m" \
+--driver-memory 5G --executor-memory 3G train_model.jar
